# sphinxcontrib-django

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES.rst  Pipfile  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: deployment.yml  linting.yml  tests.yml
docs/: conf.py  docstrings.rst  index.rst  reference.rst
docs/templates/: layout.html
sphinxcontrib_django/: __init__.py  config.py  docstrings.py  patches.py  roles.py
sphinxcontrib_django/docstrings/: __init__.py  attributes.py  classes.py  config.py  data.py  field_utils.py  methods.py  patches.py  views.py
sphinxcontrib_django/tests/: test_docstrings.py
sphinxcontrib_django/tests/testdocs/: conf.py
sphinxcontrib_django2/: __init__.py  config.py  docstrings.py  patches.py  roles.py
sphinxcontrib_django2/docstrings/: __init__.py  attributes.py  classes.py  config.py  data.py  field_utils.py  methods.py  patches.py
sphinxcontrib_django2/tests/: test_docstrings.py
sphinxcontrib_django2/tests/testdocs/: conf.py
tests/: conftest.py  test_attribute_docstrings.py  test_autodoc_skip.py  test_class_docstrings.py  test_data_docstrings.py  test_django_configured.py  test_django_setup.py  test_field_utils.py  test_method_docstrings.py  test_roles.py  test_view_docstrings.py
tests/roots/test-docstrings/: conf.py  conflicting_sphinx_extension.py  index.rst  models.rst
tests/roots/test-docstrings/dummy_django_app/: forms.py  models.py  settings.py  urls.py  views.py
tests/roots/test-docstrings/dummy_django_app2/: models.py
