[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=80", "setuptools-scm>=8"]

[project]
    authors = [
        { name = "Diederik van der Boor", email = "opensource@edoburu.nl" },
        { name = "Timo Brembeck", email = "opensource@timo.brembeck.email" },
    ]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Web Environment",
        "Framework :: Django :: 5.2",
        "Framework :: Django :: 6.0",
        "Framework :: Django",
        "Framework :: Sphinx :: Extension",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = ["Django>=5.2", "Sphinx>=3.4.0", "pprintpp"]
    description = "Improve the Sphinx autodoc for Django classes."
    dynamic = ["version"]
    keywords = ["django", "docstrings", "extension", "sphinx"]
    license = "Apache-2.0"
    maintainers = [
        { name = "Timo Brembeck", email = "opensource@timo.brembeck.email" },
    ]
    name = "sphinxcontrib-django"
    readme = "README.rst"
    requires-python = ">=3.10"

    [project.urls]
        "Bug Tracker"   = "https://github.com/sphinx-doc/sphinxcontrib-django/issues"
        "Documentation" = "https://sphinxcontrib-django.readthedocs.io/"
        "Release Notes" = "https://github.com/sphinx-doc/sphinxcontrib-django/blob/main/CHANGES.rst"
        "Source Code"   = "https://github.com/sphinx-doc/sphinxcontrib-django"

    [project.optional-dependencies]
        dev = ["pre-commit"]
        doc = ["sphinx-last-updated-by-git", "sphinx-rtd-theme"]
        optional = [
            "django-mptt",
            "django-phonenumber-field[phonenumbers]",
            "psycopg2-binary",
        ]
        test = ["coverage", "pytest", "pytest-icdiff", "requests-mock"]

[tool.setuptools_scm]
    local_scheme   = "no-local-version"
    version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
    include = ["sphinxcontrib_django*"]

[tool.black]
    skip-magic-trailing-comma = true
    preview = true

[tool.coverage.run]
    command_line = "-m pytest"
    source       = ["sphinxcontrib_django"]

[tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "if TYPE_CHECKING:",
    ]

[tool.pytest.ini_options]
    addopts    = "-ra -vv --color=yes"
    minversion = "6.0"
    testpaths  = ["tests"]

[tool.mypy]
    exclude = "^tests/roots/"
    files   = ["sphinxcontrib_django", "tests"]
    strict  = true

    [[tool.mypy.overrides]]
        ignore_missing_imports = true
        module = [
            # Third-party packages which don't ship type information
            "mptt.*",
            "phonenumber_field.*",
            "pprintpp",
            # Autodoc target apps in tests/roots which are only importable at test runtime
            "dummy_django_app.*",
            "dummy_django_app2.*",
        ]

[tool.ruff]
  line-length = 99

[tool.ruff.lint]
  select = [
    "F",
    "E",
    "W",
    "I",
    # "D",
    "RET",
    "SIM",
    "ANN",
  ]
  ignore = [
    "D1",   # Missing docstrings
  ]

[tool.ruff.lint.isort]
  required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
  # The signatures of these autodoc targets are part of the expected test output,
  # so adding annotations here would change what the tests assert on.
  "tests/roots/**/*.py" = ["ANN"]
