[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=80", "setuptools-scm>=8"]

[project]
    authors = [
        { name = "Diederik van der Boor", email = "opensource@edoburu.nl" },
        { name = "Timo Brembeck", email = "opensource@timo.brembeck.email" },
    ]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Web Environment",
        "Framework :: Django :: 5.2",
        "Framework :: Django :: 6.0",
        "Framework :: Django",
        "Framework :: Sphinx :: Extension",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = ["Django>=5.2", "Sphinx>=3.4.0", "pprintpp"]
    description = "Improve the Sphinx autodoc for Django classes."
    dynamic = ["version"]
    keywords = ["django", "docstrings", "extension", "sphinx"]
    license = "Apache-2.0"
    maintainers = [
        { name = "Timo Brembeck", email = "opensource@timo.brembeck.email" },
    ]
    name = "sphinxcontrib-django"
    readme = "README.rst"
    requires-python = ">=3.10"

    [project.urls]
        "Bug Tracker"   = "https://github.com/sphinx-doc/sphinxcontrib-django/issues"
        "Documentation" = "https://sphinxcontrib-django.readthedocs.io/"
        "Release Notes" = "https://github.com/sphinx-doc/sphinxcontrib-django/blob/main/CHANGES.rst"
        "Source Code"   = "https://github.com/sphinx-doc/sphinxcontrib-django"

    [project.optional-dependencies]
        dev = ["pre-commit"]
        doc = ["sphinx-last-updated-by-git", "sphinx-rtd-theme"]
        optional = [
            "django-mptt",
            "django-phonenumber-field[phonenumbers]",
            "psycopg2-binary",
        ]
        test = ["coverage", "pytest", "pytest-icdiff", "requests-mock"]

[tool.setuptools_scm]
    local_scheme   = "no-local-version"
    version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
    include = ["sphinxcontrib_django*"]

[tool.black]
    skip-magic-trailing-comma = true
    preview = true

[tool.coverage.run]
    command_line = "-m pytest"
    source       = ["sphinxcontrib_django"]

[tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "if TYPE_CHECKING:",
    ]

[tool.pytest.ini_options]
    addopts    = "-ra -vv --color=yes"
    minversion = "6.0"
    testpaths  = ["tests"]

[tool.mypy]
    exclude = "^tests/roots/"
    files   = ["sphinxcontrib_django", "tests"]
    strict  = true

    [[tool.mypy.overrides]]
        ignore_missing_imports = true
        module = [
            # Third-party packages which don't ship type information
            "mptt.*",
            "phonenumber_field.*",
            "pprintpp",
            # Autodoc target apps in tests/roots which are only importable at test runtime
            "dummy_django_app.*",
            "dummy_django_app2.*",
        ]

[tool.ruff]
  line-length = 99

[tool.ruff.lint]
  select = ["ALL"]
  ignore = [
    "D2",     # pydocstyle formatting conventions (only presence, D1, is enforced)
    "D3",     # pydocstyle quoting conventions (only presence, D1, is enforced)
    "D4",     # pydocstyle content conventions (only presence, D1, is enforced)
    "COM812", # conflicts with the formatter
    "ISC001", # conflicts with the formatter
    "INP001", # tests/ and docs/ aren't meant to be importable packages
  ]

[tool.ruff.lint.isort]
  required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
  max-complexity = 13  # default is 10

[tool.ruff.lint.per-file-ignores]
  # The signatures of these autodoc targets are part of the expected test output,
  # so adding annotations here would change what the tests assert on.
  "tests/roots/**/*.py" = ["ANN", "D1"]
  "docs/conf.py" = ["A001"]
  "sphinxcontrib_django/docstrings/__init__.py" = ["ARG001", "EM101", "FBT001", "FBT003", "PLC0415", "RUF002", "TID252", "TRY003"]
  "sphinxcontrib_django/docstrings/attributes.py" = ["SLF001"]
  "sphinxcontrib_django/docstrings/classes.py" = ["SLF001"]
  "sphinxcontrib_django/docstrings/field_utils.py" = ["SLF001"]
  "sphinxcontrib_django/docstrings/patches.py" = ["ARG005", "N806"]
  "sphinxcontrib_django/roles.py" = ["ARG001", "FBT001", "N806", "PERF203"]
  "tests/*" = ["D1", "S101", "T201"]
  "tests/conftest.py" = ["ARG001", "N813", "PT003", "PT022"]
  "tests/roots/test-docstrings/conf.py" = ["ARG001", "PLC0415", "PTH100"]
  "tests/roots/test-docstrings/dummy_django_app/models.py" = ["N815"]
  "tests/roots/test-docstrings/dummy_django_app/settings.py" = ["S105"]
  "tests/roots/test-docstrings/dummy_django_app/views.py" = ["ARG001"]
  "tests/test_field_utils.py" = ["ARG001", "PLC0415", "SLF001"]
  "tests/test_roles.py" = ["ARG001", "PLR2004"]
  "tests/test_view_docstrings.py" = ["ARG001"]

[tool.ruff.lint.pylint]
  max-args = 6  # default is 5
  max-branches = 14  # default is 12
